# python-acr

./: .clang-format  .clangd  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
_libacr/: __init__.pyi
acr/: acr.py
ext/: libacr.c  pcsc_connection.c  pcsc_connection.h  pcsc_error.h
tests/: test_acr.py
tests/ext/: test_libacr.py
